--- a/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/Base.lproj/Main.storyboard
@@ -341,6 +341,14 @@
                                     <action selector="closeMe:" destination="uBt-NU-j4p" eventType="touchUpInside" id="mkh-69-3oh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofV-Pf-n4d">
+                                <rect key="frame" x="16" y="20" width="39" height="30"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Share"/>
+                                <connections>
+                                    <action selector="showShareSheet:" destination="uBt-NU-j4p" eventType="touchUpInside" id="WVP-U8-1my"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -351,9 +359,12 @@
                             <constraint firstItem="hLK-O6-CPS" firstAttribute="top" secondItem="2zi-2w-9BL" secondAttribute="bottom" id="LCf-2W-ExG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="mC7-Ap-HHL" secondAttribute="trailing" constant="6" id="LRU-EW-JJ0"/>
                             <constraint firstItem="2zi-2w-9BL" firstAttribute="leading" secondItem="H18-dY-ZqD" secondAttribute="leadingMargin" constant="-16" id="LVh-Wp-rOy"/>
+                            <constraint firstItem="ofV-Pf-n4d" firstAttribute="leading" secondItem="H18-dY-ZqD" secondAttribute="leadingMargin" id="e0Y-Ec-P3Y"/>
+                            <constraint firstItem="ofV-Pf-n4d" firstAttribute="top" secondItem="P77-8B-TqC" secondAttribute="bottom" id="o0L-8L-sxe"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="shareButton" destination="ofV-Pf-n4d" id="BNO-e4-Bv1"/>
                         <outlet property="webView" destination="2zi-2w-9BL" id="ly6-Ql-b8c"/>
                     </connections>
                 </viewController>
